--- a/usr_updated.ipynb
+++ b/usr_updated.ipynb
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -195,22 +195,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "'isake viparIwa'"
-            ]
-          },
-          "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "saMpUNa sUyArvaswa\n"
+          ]
         }
       ],
       "source": [
-        "s = con.convert(\"इसके विपरीत\")"
+        "s = con.convert(\"संपूण सूयार्वस्त\")\n",
+        "print(s)"
       ]
     },
     {
@@ -6423,6 +6421,25 @@
       ],
       "source": [
         "str1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['3b', '6a', '5a', '4b', '1a', '7b', '2a', '6b', '3a', '5b', '1b', '4a', '2b', '7a']\n"
+          ]
+        }
+      ],
+      "source": [
+        "import os\n",
+        "for _, _, files in os.walk(\"./example/example_subfolder\"):\n",
+        "  print(file)"
       ]
     },
     {
