--- a/usr_updated.ipynb
+++ b/usr_updated.ipynb
@@ -139,20 +139,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "#इसीलिए उस्को परीक्षा मे लिखने की अनुमति नहीं मिली \n"
+            "#lekina xUsarI gAdZI _L_imousine ke AkAra kI hE\n"
           ]
         }
       ],
       "source": [
-        "s = \"isIlie usko parIkRA me liKane kI anumawi nahIM milI \"\n",
-        "print('#' +con.convert(s))"
+        "s = \"#लेकिन दूसरी गाड़ी Lइमोउसिने के आकार की है\"\n",
+        "print(con.convert(s))"
       ]
     },
     {
