--- a/usr_updated.ipynb
+++ b/usr_updated.ipynb
@@ -482,10 +482,42 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from wxconv import WXC \n",
+        "con = WXC(order='utf2wx')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'_If_ _connective_ _is_ _either_ isake alAvA, isake awirikwa _or_ isake sAWa-sAWa'"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "con.convert(\"If connective is either इसके अलावा, इसके अतिरिक्त or इसके साथ-साथ\")"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "लेकिन"
+      ]
     }
   ],
   "metadata": {
